kubernetes/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-map-api
  labels:
    app: py-map-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: py-map-api
  template:
    metadata:
      labels:
        app: py-map-api
    spec:
      containers:
        - name: py-map-api
          image: ghcr.io/rwese/py_map_api@sha256:6cefe43c3d4ba074f7c5e2c8233ccb0a1bdc7fa5305f67dae1b84433e7f40cc4
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
