kubernetes/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: py-map-api
  labels:
    app: py-map-api
spec:
  type: ClusterIP
  selector:
    app: py-map-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
