kubernetes/manifests/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: py-map-api
  labels:
    app: py-map-api
spec:
  type: LoadBalancer
  selector:
    app: py-map-api
  ports:
  - name: http
    port: 8000
    targetPort: 8000
