kubernetes/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-map-api-ingress
  annotations:
    kubernetes.io/ingressClassName: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - py-map-api.cluster.local
      secretName: py-map-api-tls
  rules:
    - host: py-map-api.cluster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: py-map-api
                port:
                  number: 80
